objects/Payment_Gateway_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Password__c</fullName>
        <label>API Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Signature__c</fullName>
        <label>API Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <label>API Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Side_Encryption_Key_Part_1__c</fullName>
        <label>Client Side Encryption Key - Part 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Side_Encryption_Key_Part_2__c</fullName>
        <label>Client Side Encryption Key - Part 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Payment Gateway Credentials</label>
</CustomObject>